2009-03-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcombotagentry.c: use accessors instead of
	widget->window and widget->style.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpzoompreview.c: use GtkAdjustment's accessors.

	* libgimp/gimpprocbrowserdialog.c: use accessors instead of
	dialog->vbox and widget->parent.

2009-03-22  Sven Neumann  <sven@gimp.org>

	* app/batch.c (batch_run_cmd): added a newline to the output in
	the error case.

	* plug-ins/script-fu/script-fu-eval.c (script_fu_eval_run):
	instead of disabling all output in batch mode, use the usual
	routine for error handling and pass the error string along with
	the return values.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c: use GtkAdjustment's
	accessors.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpscaleentry.c: use GtkAdjustment's accessors.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpquerybox.c (create_query_box): use
	gtk_dialog_get_content_area() instead of dialog->vbox.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptagentry.c: use "list" as variable name for
	iterators to be consistent with the rest of GIMP; various code
	cleanups.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* modules/color-selector-wheel.c: remove GTK+ version check and
	related evilness because we depend on a proper GTK+ version now.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gtkscalebutton.[ch]: remove this evil hack.

	* app/widgets/gimpscalebutton.[ch]
	* app/widgets/gimppropwidgets.c: minor adjustments so the widget
	from GTK+ gets used.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpblobeditor.c
	* app/widgets/gimpbrushselect.c
	* app/widgets/gimpcolorbar.c
	* app/widgets/gimpcolordialog.c
	* app/widgets/gimpcolorframe.c
	* app/widgets/gimpcontainergridview.c
	* app/widgets/gimpcontainerpopup.c