@@ -228,6 +228,10 @@ argument_list|(
 name|box
 argument_list|)
 decl_stmt|;
+name|GtkWidget
+modifier|*
+name|sb
+decl_stmt|;
 name|box
 operator|->
 name|scrolled_win
@@ -264,7 +268,9 @@ operator|->
 name|scrolled_win
 argument_list|)
 expr_stmt|;
-name|GTK_WIDGET_UNSET_FLAGS
+name|sb
+operator|=
+name|gtk_scrolled_window_get_vscrollbar
 argument_list|(
 name|GTK_SCROLLED_WINDOW
 argument_list|(
@@ -272,8 +278,11 @@ name|box
 operator|->
 name|scrolled_win
 argument_list|)
-operator|->
-name|vscrollbar
+argument_list|)
+expr_stmt|;
+name|GTK_WIDGET_UNSET_FLAGS
+argument_list|(
+name|sb
 argument_list|,
 name|GTK_CAN_FOCUS
 argument_list|)
@@ -356,6 +365,10 @@ decl_stmt|;
 name|GtkStyle
 modifier|*
 name|sw_style
+decl_stmt|;
+name|GtkWidget
+modifier|*
+name|sb
 decl_stmt|;
 name|GtkRequisition
 name|req
@@ -459,7 +472,9 @@ argument_list|,
 name|NULL
 argument_list|)
 expr_stmt|;
-name|gtk_widget_size_request
+name|sb
+operator|=
+name|gtk_scrolled_window_get_vscrollbar
 argument_list|(
 name|GTK_SCROLLED_WINDOW
 argument_list|(
@@ -467,8 +482,11 @@ name|box
 operator|->
 name|scrolled_win
 argument_list|)
-operator|->
-name|vscrollbar
+argument_list|)
+expr_stmt|;
+name|gtk_widget_size_request
+argument_list|(
+name|sb
 argument_list|,
 operator|&
 name|req
